llvm/test/tools/llc/new-pm/x86_64-regalloc-pipeline.mir
# REQUIRES: x86-registered-target
# Test default pipeline
# RUN: llc -mtriple=x86_64-unknown-linux-gnu -enable-new-pm -O3 -print-pipeline-passes -filetype=null %s 2>&1 | FileCheck %s

# Test the -regalloc-npm option
# RUN: llc -mtriple=x86_64-unknown-linux-gnu -enable-new-pm -O3 -regalloc-npm=regallocfast -print-pipeline-passes -filetype=null %s 2>&1 | FileCheck %s --check-prefix=CHECK-FAST

# RUN: llc -mtriple=x86_64-unknown-linux-gnu -enable-new-pm -O3 -regalloc-npm='greedy<tile-reg>' -print-pipeline-passes -filetype=null %s 2>&1 | FileCheck %s --check-prefix=CHECK-GREEDY-FILTER

# This test attempts to bypass the tile register filter pass, inserts the default greedy<all> pass and then 
# attempts to insert an extraneous pass.
# RUN: not llc -mtriple=x86_64-unknown-linux-gnu -enable-new-pm -O3 -regalloc-npm='default,default,basic' 2>&1 | FileCheck %s --check-prefix=CHECK-ERROR

# RUN: not llc -mtriple=x86_64-unknown-linux-gnu -enable-new-pm -O3 -regalloc-npm='machine-cp' -print-pipeline-passes -filetype=null %s 2>&1 | FileCheck %s --check-prefix=CHECK-INVALID
# RUN: not llc -mtriple=x86_64-unknown-linux-gnu -enable-new-pm -passes='machine-sink' -regalloc-npm='greedy' -print-pipeline-passes -filetype=null %s 2>&1 | FileCheck %s --check-prefix=CHECK-BOTH-INVALID

# CHECK: greedy<tile-reg>
# CHECK: greedy<all>

# CHECK-FAST: regallocfast,greedy<tile-reg>,greedy<all>
# CHECK-GREEDY: greedy<all>
# CHECK-GREEDY-FILTER: greedy<tile-reg>
# CHECK-ERROR: {{.*}}: error: extra passes in regalloc pipeline: basic
# CHECK-INVALID: {{.*}}: error: unknown machine pass: machine-cp
# CHECK-BOTH-INVALID: {{.*}}: error: --passes and --regalloc-npm cannot be used together
